my first react page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Prashant-3103.github.io/my-first-simple-react-page",
+  "homepage": "https://Prashant-3103/my-first-simple-react-page",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
